[package]
name = "Typespeed"
version = "0.1.0"
authors = ["Dawid Nadolski <dawidnadolski@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
cgmath = "0.17.0"
rand = "0.7.3"
toml = "0.5"
log = "0.4"
lyon = "0.13"
smart-default = "0.5"
nalgebra = {version = "0.18", features = ["mint"] }
# Has to be the same version of mint that nalgebra uses here.
mint = "0.5"
gilrs = "0.7"
approx = "0.3"

[dev-dependencies]
chrono = "0.4"
fern = "0.5"
rand = "0.7"
structopt = "0.2"
cgmath = { version = "0.17", features = ["mint"]}
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"