[package]
name = "typespeed"
version = "0.1.0"
authors = ["Dawid Nadolski <dawidnadolski@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
cgmath = "0.17.0"
rand = "0.7.3"
mint = "0.5"

[dev-dependencies]
cgmath = { version = "0.17", features = ["mint"]}